--- a/website/src/content/docs/docs/howtos/Client Generation/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/04renaming.mdx
@@ -17,10 +17,9 @@ By default, any language code generator will assume the TYPESPEC name is the cli
 
 > **NOTE:** While names are not transformed, they will be adapted to what is idiomatic of the language (Python snake_case, etc.).
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
-```typespec
+```typespec title=main.tsp
 namespace PetStoreNamespace;
 
 @doc("This is the input I need")
@@ -36,19 +35,12 @@ model InputModel {
 op GetModel is ResourceRead<InputModel>;
 ```
 
-</TabItem>
-
-<TabItem value="python" label="Python">
-
 ```python
 class InputModel:
   name: str = rest_field(readonly=True)
 
 response: InputModel = client.get_model(name="name")
 ```
-
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
 
 ```csharp
 namespace PetStoreNamespace.Models
@@ -73,9 +65,6 @@ namespace PetStoreNamespace
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
-
 ```typescript
 interface InputModel {
   name: string;
@@ -83,9 +72,6 @@ interface InputModel {
 
 const model: InputModel = await client.path("/petStore/model/{name}").get();
 ```
-
-</TabItem>
-<TabItem value="java" label="Java" >
 
 ```java
 package com.petstorenamespace.models;
@@ -100,8 +86,7 @@ public final class PetStoreNamespaceClient {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
 
 ## Customizations
 
@@ -117,10 +102,9 @@ Language target takes priority over `client` target.
 > **NOTE:** As model name do not get serialized as JSON, sometimes the best choice is to rename the main TYPESPEC for clarity. Talk to your emitter contact is you're unsure
 > if you should rename the model in the main TYPESPEC or customize it.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
-```typespec
+```typespec title=client.tsp
 import "./main.tsp";
 import "@azure-tools/typespec-client-generator-core";
 
@@ -132,18 +116,12 @@ using Azure.ClientGenerator.Core;
 @@clientName(InputModel.name, "input_name", "python"); // Python may need a different to be idiomatic
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
-
 ```python
 class InputOptions:
   input_name: str = rest_field(rest_name="name", readonly=True)
 
 response: InputOptions = client.get_computed_model(input_name="name")
 ```
-
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
 
 ```c#
 namespace PetStoreNamespace.Models
@@ -168,15 +146,9 @@ namespace PetStoreNamespace
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
-
 ```typescript
 // Typescript do not change behavior based on protocolAPI or convenientAPI
 ```
-
-</TabItem>
-<TabItem value="java" label="Java" >
 
 ```java
 package com.petstorenamespace.models;
@@ -191,15 +163,13 @@ public final class PetStoreNamespaceClient {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
 
 ### Rename operations and parameters
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
-```typespec
+```typespec title=client.tsp
 import "./main.tsp";
 import "@azure-tools/typespec-client-generator-core";
 
@@ -209,17 +179,11 @@ using Azure.ClientGenerator.Core;
 @@clientName(GetModel, "GetComputedModel", "python"); // Note that Python will still snake_case it
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
-
 ```python
 class InputModel:
   input_name: str = rest_field(rest_name="name", readonly=True)
 response: InputModel = client.get_computed_model(name="name")
 ```
-
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
 
 ```csharp
 namespace PetStoreNamespace.Models
@@ -244,15 +208,9 @@ namespace PetStoreNamespace
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
-
 ```typescript
 // Typescript do not change behavior based on protocolAPI or convenientAPI
 ```
-
-</TabItem>
-<TabItem value="java" label="Java" >
 
 ```java
 package com.petstorenamespace.models;
@@ -267,8 +225,7 @@ public final class PetStoreNamespaceClient {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
 
 ## Implementation
 
