--- a/website/src/content/docs/docs/howtos/Client Generation/11etag.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/11etag.mdx
@@ -8,8 +8,7 @@ This doc details what emitters will generate for conditional request header
 
 ## `If-Match` and `If-None-Match`
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
 ```typespec
 model Response {
@@ -28,32 +27,19 @@ op get(
 ): Response;
 ```
 
-</TabItem>
-
-<TabItem value="python" label="Python">
-
 ```python
 from azure.core import MatchConditions
 
 def get(self, *, etag: Optional[str] = None, match_condition: Optional[MatchConditions] = None) -> Response:
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
-
 ```csharp
 
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
-
 ```typescript
 
 ```
-
-</TabItem>
-<TabItem value="java" label="Java" >
 
 ```java
 import com.azure.core.http.MatchConditions;
@@ -61,12 +47,8 @@ import com.azure.core.http.MatchConditions;
 public Response get(MatchConditions matchConditions);
 ```
 
-</TabItem>
-<TabItem value="go" label="Go" >
-
 ```go
 
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
